--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -1,6 +1,10 @@
+.headerwrapper, .footerwrapper {
+    height: 13%;
+}
+
 header {
     width: 100%;
-    height: 13%;
+    height: 100%;
     left: 0;
     background-color: rgb(87, 77, 77);
 }
@@ -12,7 +16,6 @@ aside {
 main {
     width: 100%;
     margin: 0;
-    margin-top: 27.5%;
     height: 74%;
 }
 
