--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -22,8 +22,8 @@ main {
 main li {
     border: 1px solid black;
     width: 100%;
-    height: 100px;
-    font-size: 3em;
+    height: 50px;
+    font-size: 1.7em;
 }
 
 footer {
@@ -31,31 +31,31 @@ footer {
 }
 
 footer img {
-    width: 200px;
-    height: 200px;
+    position: absolute;
+    width: 17%;
+    max-height: 90%;
+    transition: transform 1s, width 1s, height 1s;
     align-self: center;
 }
 
 #musictitle {
-    display: block;
-    width: 500px;
+    width: 200px;
     text-align: center;
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -250px !important;
-    font-size: 2.5rem;
+    margin-left: -100px !important;
+    font-size: 1.2rem;
 }
 
 #artistname {
-    display: block;
     width: 150px;
     text-align: center;
     position: absolute;
     top: 20%;
     left: 50%;
     margin-left: -50px !important;
-    font-size: 2rem;
+    font-size: 1rem;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -74,19 +74,34 @@ footer img {
 }
 
 #progress {
-    height: 20px;
-    width: 400px;
+    height: 5px;
+    width: 175px;
 }
 
 #playbar {
-    margin-left: -200px ;
+    margin-left: -87.5px;
     align-self: flex-end;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 i {
-    font-size: 2.5rem;
+    font-size: 1rem;
 }
+
+.musicshower {
+    height: 74%;
+    width: 100%;
+    background-color: rgb(44, 39, 39);
+    bottom: 12.8%;
+    overflow: hidden;
+}
+
+.musicshower img {
+    transform: translateY(15%);
+    height: 350px;
+    width: 300px;
+}
+
 
 @keyframes scroll-loop {
     from {
