--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -81,7 +81,6 @@ footer .artistname {
 }
 
 footer .playbar {
-    width: 175px;
     height: 100px;
     left: 50%;
     margin-left: -87.5px;
@@ -170,57 +169,5 @@ footer .progress {
     transition-delay: 0.3s;
 }
 
-/* footer img {
-    position: absolute;
-    width: 17%;
-    max-height: 90%;
-    transition: transform 1s, width 1s, height 1s;
-    align-self: center;
+.soundprogress {
 }
-
-#musictitle {
-    width: 200px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: -100px !important;
-    font-size: 1.2rem;
-}
-
-#artistname {
-    width: 150px;
-    text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    margin-left: -50px !important;
-    font-size: 1rem;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-#sound {
-    display: none !important;
-}
-
-#progress {
-    height: 5px;
-    width: 175px;
-}
-
-#playbar {
-    margin-left: -87.5px;
-    align-self: flex-end;
-    margin-bottom: 5%;
-}
-
-i {
-    font-size: 1rem;
-}
-
-.musicshower img {
-    transform: translateY(15%);
-    height: 350px;
-    width: 300px;
-} */
