--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -2,15 +2,74 @@
     height: 13%;
 }
 
-header {
+footer div.volumediv {
+    display: none !important;
+}       
+
+.headerwrapper {
     width: 100%;
-    height: 100%;
+    height: 13%;
     left: 0;
     background-color: rgb(87, 77, 77);
 }
 
+.menudrawer {
+    display: inline-block !important;
+    text-align: center;
+    font-size: 2.5em;
+    vertical-align: middle;
+    left: 5%;
+    transform: translateY(-50%);
+}
+
 aside {
-    display: none;
+    position: absolute;
+    width: 75%;
+    height: 100%;
+    background-color: white;
+    border: 1px solid black;
+    z-index: 12;
+    transition: transform 0.5s;
+}
+
+.hide {
+    transform: translateX(-100%);
+}
+
+#menupdppicture {
+    width: 75px;
+    height: 75px;
+}
+
+.drawheader {
+    display: inline-flex;
+    height: 13%;
+    align-items: center;
+}
+
+.drawheader img {
+    margin-left: 10px;
+}
+
+.drawcontainer {
+    height: 87%;
+}
+
+.drawcontainer ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.drawcontainer ul li {
+    border-top: 1px solid black;
+    height: 35px;
+    padding: 5px;
+}
+
+#disconnectbtn {
+    margin-top: auto !important;
 }
 
 main {
@@ -167,7 +226,4 @@ footer .progress {
 
 .delaytransition {
     transition-delay: 0.3s;
-}
-
-.soundprogress {
 }
