--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -56,21 +56,30 @@ footer div.volumediv {
     max-height: 50%;
     overflow-y: scroll;
     background: white;
+    display: inline-flex;
 }
 
 aside {
     position: absolute;
-    width: 75%;
+    width: 100%;
     height: 100%;
-    background-color: white;
-    border: 1px solid black;
     z-index: 12;
     transition: transform 0.5s;
+    left: -100%;
 }
 
 .hide {
-    transform: translateX(-100%);
+    transform: translateX(100%);
 }
+
+.asidediv {
+    width: 65%;
+    height: 100%;
+    background-color: white;
+    border: 1px solid black;
+    z-index: 13;
+}
+
 
 #menupdppicture {
     width: 75px;
@@ -102,6 +111,10 @@ aside {
     border-top: 1px solid black;
     height: 35px;
     padding: 5px;
+}
+
+#disconnect {
+    margin-top: auto;
 }
 
 #disconnectbtn {
@@ -137,25 +150,26 @@ main li {
 }
 
 #searchresult {
+    display: inline-flex;
     flex-direction: column;
     width: 100%;
+    margin: 0;
 }
 
 #searchresult li {
     display: inline-flex;
     font-size: 1.2em;
-    vertical-align: middle;
-}
-
-#searchresult li p {
-    display: inline-flex;
-    vertical-align: middle;
+    margin: 0 !important;
 }
 
 #searchresult li img {
-    margin-left: 2%;
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 100%;
+}
+
+#searchresult li p {
+    margin: 0;
+    height: 45%;
 }
 
 .footerwrapper {
@@ -242,15 +256,14 @@ footer .progress {
     height: 74%;
     width: 100%;
     background-color: rgb(44, 39, 39);
-    bottom: 13%;
-    top: 13%;
+    bottom: -61.1%;
     z-index: 10;
     overflow: hidden;
     transition: transform 1s;
 }
 
 .musicfullhide {
-    transform: translateY(100%);
+    transform: translateY(-100%);
 }
 
 .musicfull .songimg {
