--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -53,7 +53,7 @@ footer div.volumediv {
 #searchdiv {
     position: absolute;
     width: 100%;
-    height: 50%;
+    max-height: 50%;
     overflow-y: scroll;
     background: white;
     display: inline-flex;
