--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -126,6 +126,7 @@ main {
     width: 100%;
     margin: 0;
     height: 74%;
+    overflow-y: scroll;
 }
 
 main li {
@@ -172,6 +173,38 @@ main li {
     height: 45%;
 }
 
+/*
+//////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////PLAYLISTS////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////// 
+*/
+
+.playlistscontainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.playlistObject {
+    width: 100px;
+    height: 150px;
+}
+
+.playlistObject div {
+    border: 1px solid black;
+    width: 100%;
+    height: 75%;
+}
+
+/* 
+/////////////////////////////////////CSS FOOTER ///////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////// 
+*/
 .footerwrapper {
     z-index: 11;
 }
@@ -251,7 +284,12 @@ footer .progress {
     transform: translateY(-100%);
 }
 
-/* CSS Agrandissement lecteur */
+
+
+/* /////////////////////// CSS Agrandissement lecteur //////////////////////////
+/////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////// */
 .musicfull {
     height: 74%;
     width: 100%;
