--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,7 @@ header {
 aside {
     width: 17%;
     height: 87%;
+    border: 1px solid black;
     position: fixed;
     left: 0;
     top: 0;
@@ -37,9 +38,10 @@ aside {
 }
 
 main {
-    height: 100%;
+    height: 82%;
     margin-left: 17%;
     overflow-y: scroll;
+    width: 83%;
 }
 
 footer {
@@ -48,6 +50,11 @@ footer {
     width: 100%;
     background-color: rgb(41, 37, 37);
     z-index: 10;
+    bottom: 0;
+}
+footer img {
+    max-width: 165px;
+    max-height: 90%;
 }
 
 #progress {
@@ -58,4 +65,15 @@ footer {
 #progress div {
     background-color: white;
     height: 100%;
+}
+
+.musicfull {
+    display: none;
+}
+
+.headerwrapper {
+    width: 83%;
+    float: right;
+    border: 1px solid black;
+    height: 5%;
 }
