--- a/style/style.css
+++ b/style/style.css
@@ -30,14 +30,15 @@ header {
 
 
 aside {
+    background-color: rgb(41, 37, 37);
     width: 17%;
     min-width: 200px;
     height: 87%;
-    border: 1px solid black;
     position: fixed;
     left: 0;
     top: 0;
     z-index: 10;
+    color: white;
 }
 
 #spotinein {
@@ -56,7 +57,7 @@ aside {
     width: 100%;
     height: 25%;
     display: flex;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgb(90, 86, 86);
 }
 
 .drawheader h3 {
@@ -75,7 +76,7 @@ aside {
 
 .drawcontainer ul li {
     height: 30px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgb(90, 86, 86);
     display: flex;
     align-items: center;
     padding-left: 5px;
@@ -96,6 +97,8 @@ main {
     width: 83%;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    color: white;
+    background-color: rgb(41, 37, 37);
 }
 
 main::-webkit-scrollbar {
@@ -107,9 +110,8 @@ main::-webkit-scrollbar-thumb {
 }
 
 .pageIntro {
-    position: relative;
     width: 100%;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgb(90, 86, 86);;
     height: 35%;
 }
 
@@ -130,7 +132,7 @@ main::-webkit-scrollbar-thumb {
 .lastheardObject {
     width: 200px;
     height: 225px;
-    border: 1px solid;
+    border: 1px solid rgb(90, 86, 86);;
 }
 
 .lastheardObject img {
@@ -139,10 +141,10 @@ main::-webkit-scrollbar-thumb {
 }
 
 #songinfobar {
-    margin-top: 2%;
+    height: 30px;
     display: flex;
-    align-content: center;
-    border-bottom: 1px solid;
+    align-items: center;
+    border-bottom: 1px solid rgb(90, 86, 86);;
 }
 
 .listsongname {
@@ -182,7 +184,7 @@ footer {
     min-height: 65px;
     height: 13%;
     width: 100%;
-    background-color: rgb(41, 37, 37);
+    background-color: rgb(133, 40, 40);
     z-index: 10;
     bottom: 0;
 }
@@ -215,13 +217,52 @@ footer img {
 .headerwrapper {
     width: 83%;
     float: right;
-    border: 1px solid black;
+    border: 1px solid rgb(90, 86, 86);;
     height: 5%;
+    background-color: rgb(41, 37, 37);;
+}
+
+#username {
+    color: white;
+    margin: 0;
+    margin-right: 1%;
+}
+
+#userimage {
+    color: white;
+    margin-left: auto;
+    margin-right: 15px;
+    width: 20px;
+    height: 20px;
+}
+
+.searchwrapper {
+    height: 1000%;
+}
+
+#searchdiv {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#searchdiv::-webkit-scrollbar {
+    display: none;
+    width: 10px;
+    background-color: white;
+}
+
+#searchdiv::-webkit-scrollbar-thumb {
+    background-color: rgb(180, 79, 79);
+}
+
+#searchdiv:hover::-webkit-scrollbar {
+    display: block;
 }
 
 .fa-search {
     font-size: 2rem;
     margin-left: 1%;
+    color: rgba(245, 245, 245, 0.486);
 }
 
 .searchbar {
@@ -234,6 +275,8 @@ footer img {
     border: transparent;
     z-index: 10;
     margin-left: 1%;
+    background-color: rgb(41, 37, 37);
+    color: whitesmoke;
 }
 
 #searchinput:focus {
@@ -249,7 +292,7 @@ footer img {
     display: flex;
     font-size: 1.5rem;
     align-items: center;
-    border: 1px solid black;
+    border: 1px solid rgb(90, 86, 86);
 }
 
 #searchresult li img {
@@ -303,7 +346,7 @@ font-size: 130%;
 
 #songlist li {
     height: 60px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgb(90, 86, 86);;
 }
 
 #songlist li p  {
