--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,20 @@ main::-webkit-scrollbar-thumb {
     background: rgb(63, 58, 58);
 }
 
+.imgcontainer {
+    width: 100%;
+}
+
+.imglist {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.imgcontainer img {
+    width: 150px;
+    height: 150px;
+}
+
 .pageIntro {
     width: 100%;
     border-bottom: 1px solid rgb(90, 86, 86);;
@@ -238,8 +252,8 @@ footer img {
     color: white;
     margin-left: auto;
     margin-right: 15px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
 }
 
 .searchwrapper {
