--- a/style/smartphone.css
+++ b/style/smartphone.css
@@ -18,7 +18,7 @@ footer div.volumediv {
     width: 100%;
     height: 13%;
     left: 0;
-    background-color: rgb(87, 77, 77);
+    background-color: rgb(41, 37, 37);
 }
 
 .headerwrapper header {
@@ -32,6 +32,7 @@ footer div.volumediv {
     vertical-align: middle;
     left: 5%;
     transform: translateY(-50%);
+    color: white;
 }
 
 .searchshow {
@@ -75,6 +76,7 @@ aside {
     transition: transform 0.5s;
     left: -100%;
     border: transparent;
+    background: transparent;
 }
 
 .hide {
@@ -87,6 +89,7 @@ aside {
     background-color: white;
     border: 1px solid black;
     z-index: 13;
+    background-color: rgb(41, 37, 37);
 }
 
 #menupdppicture {
@@ -103,6 +106,10 @@ aside {
 
 .drawheader img {
     margin-left: 10px;
+}
+
+.drawheader h3 {
+    display: block !important;
 }
 
 .drawcontainer {
@@ -138,11 +145,70 @@ main {
     overflow-y: scroll;
 }
 
+.fa-heart, .fa-headphones {
+    font-size: 0.8em;
+    margin-right: 3%;
+}
+
+#textdiv {
+    width: 100%;
+}
+
+.pageIntro {
+    display: none;
+}
+
+.pageIntro p {
+    font-size: 0.5em;
+    line-height: 0.5em;
+}
+
+.lastheardcontainer {
+    height: 40%;
+    display: flex;
+    flex-direction: row;
+}
+
+.lastheardcontainer .scrollable {
+    width: 150%;
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.lastheardObject {
+    width: 100px;
+    height: 150px;
+    border: 1px solid rgb(90, 86, 86);
+}
+
+.lastheardObject img {
+    width: 100%;
+    height: 100%;
+}
+
 main li {
     border: 1px solid black;
     width: 100%;
     height: 50px;
     font-size: 1.7em;
+}
+
+#inscription {
+    width: 75% !important;
+}
+
+#inscription header {
+    margin: auto;
+}
+
+.imglist, .imgcontainer {
+    width: 100%;
+}
+
+.imglist img {
+    width: 85px;
+    height: 85px;
 }
 
 .musicimg {
@@ -154,10 +220,6 @@ main li {
     display: flex;
     vertical-align: middle;
     justify-content: end;
-}
-
-#songlist .fa-headphones {
-    display: none;
 }
 
 #songlist p {
@@ -262,6 +324,10 @@ footer {
     overflow: hidden;
 }
 
+footer .currentlength, footer .totalength {
+    display: none !important;
+}
+
 footer > * {
     transition: transform 1s;
 }
@@ -340,14 +406,14 @@ footer .progress {
 ////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////// */
 .musicfull {
-    height: 74%;
+    height: 74.5%;
     width: 100%;
-    background-color: rgb(44, 39, 39);
-    bottom: -61.1%;
+    bottom: -62.0%;
     z-index: 10;
     overflow: hidden;
     transition: transform 1s;
     display: block;
+    background: rgb(133, 40, 40);;
 }
 
 .musicfullhide {
