--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,11 @@ html, body {
     background-color: rgb(41, 37, 37);
 }
 
+.fa-heart, .fa-headphones {
+    font-size: 1.7em;
+    margin-right: 1%;
+}
+
 body {
     border: 0.0001px solid transparent;
 }
@@ -141,6 +146,9 @@ main::-webkit-scrollbar-thumb {
 .lastheardcontainer {
     width: 100%;
     height: 35%;
+}
+
+.lastheardcontainer .scrollable {
     display: flex;
     flex-direction: row;
 }
